# SDL-Grid

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: controller.cpp  controller.h  entity.h  example_grid_1.grid  game.cpp  game.h  game_objects.h  grid.cpp  grid.h  main.cpp  main.h  player.cpp  player.h  random_point.cpp  random_point.h  renderer.cpp  renderer.h
tests/: Makefile  grid_tests.cpp  grid_tests.h
tests/data/: sample.grid
